--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "roboto-fontface": "*",
     "swiper": "^10.2.0",
     "vue": "^3.2.13",
+    "vue-pdf-app": "^2.1.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
